WCM-538 convert portlets to osgi components